installdir = $(pkgdatadir)/skin_default/sifteam_others

dist_install_DATA = \
	cancel.png \
	ci_setup.png \
	disk.png \
	diskusb.png \
	empty.png \
	emuinfo.png \
	install_auto.png \
	install_disable.png \
	install_later.png \
	install_now.png \
	kernel.png \
	ok.png \
	package.png \
	packages.png \
	partitionmanager.png \
	plugins.png \
	reboot.png \
	run.png \
	skin_selector.png \
	folder.png \
	star.png \
	star_disabled.png \
	top10.png \
	bookmark.png
	config.png
