installdir = $(pkgdatadir)/skin_default/sifteam_panel

dist_install_DATA = \
	about.png \
	default_lists.png \
	manual_scan.png \
	restart.png \
	standby.png \
	about_screen.png \
	default_wizard.png \
	media_player.png \
	restart_enigma.png \
	standby_restart_list.png \
	auto_scan.png \
	display_setup.png \
	netbrowser.png \
	satellite_equipment_setup.png \
	subtitle_selection.png \
	av.png \
	dvd_player.png \
	netif.png \
	satfinder.png \
	subtitles.png \
	av_setup.png \
	emu.png \
	netmounts.png \
	scart_switch.png \
	swap.png \
	ci_assign.png \
	emuinfo.png \
	netns.png \
	scripts.png \
	system_selection.png \
	ci_setup.png \
	factory_reset.png \
	network_setup.png \
	service_info_screen.png \
	timer_edit.png \
	cleanup_config.png \
	filecommand.png \
	panel_setup.png \
	service_searching_selection.png \
	timezone_setup.png \
	configuration.png \
	info_screen.png \
	parental_setup.png \
	settings.png \
	tuner_setup.png \
	crashlog_config.png \
	input_device_setup.png \
	partitionmanager.png \
	settingsloader.png \
	undefined.png \
	crossepg.png \
	kernel.png \
	plugin_selection.png \
	setup_selection.png \
	usage_setup.png \
	cs.png \
	keyboard_setup.png \
	positioner_setup.png \
	skin_selector.png \
	usb_devices.png \
	daemons.png \
	language_setup.png \
	preferences_setup.png \
	sleep.png \
	video_finetune.png \
	deep_standby.png \
	lcnscanner.png \
	reboot.png \
	software_manager.png \
	hardisk_selection.png \
	bouquets.png \
	softwaremanager.png \
	video_enhancement_settings.png

