SUBDIRS = Daemons Extra

installdir = $(pkglibdir)/python/SIFTeam

install_PYTHON = \
	__init__.py About.py Addons.py Crashlogs.py DaemonsList.py Devices.py Emulator.py HddInfo.py HddMount.py \
	HddPartitions.py HddSetup.py KernelModules.py Panel.py Preferences.py Scripts.py Swap.py \
	UsbDevices.py PanelConfig.py VideoSelection.py
