SUBDIRS = Daemons Extra SoftwareManager Settings Cloud

installdir = $(pkglibdir)/python/SIFTeam

install_PYTHON = \
	__init__.py About.py Crashlogs.py DaemonsList.py Devices.py Emulator.py HddInfo.py HddMount.py \
	HddPartitions.py HddSetup.py KernelModules.py Panel.py Preferences.py Scripts.py Swap.py \
	UsbDevices.py PanelConfig.py VideoSelection.py SettingsHelper.py SoftwareManagerHelper.py \
	Scheduler.py
