installdir = $(pkglibdir)/python/Components/Renderer

install_PYTHON = \
	__init__.py Label.py Progress.py Listbox.py Renderer.py Pixmap.py \
	FixedLabel.py PositionGauge.py Canvas.py Picon.py Pig.py \
	FrontpanelLed.py ChannelNumber.py VideoSize.py Analogic.py AnimatedPicon.py AnimatedProvIcon.py \
	AnimatedSatIcon.py Cutext.py PiconSD.py Roller.py ServiceName.py ServiceNumber.py NextEpgInfo.py
